src/objects/MX_SB_VTS_CatalogoObjeciones__c.object
<CustomObject>
    <description>En este objeto se cargaran todas las objeciones correspondientes  a un producto o flujo de venta</description>
    <fields>
        <fullName>MX_SB_VTS_DetOjecion__c</fullName>
        <description>Texto detallado de la Objeción</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Detalle Objeción</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_NoUsoObjecion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica cuando una objeción no se utiliza</description>
        <label>No uso Objeción</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_NombreObjecion__c</fullName>
        <description>Nombre de la objeción</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre objeción</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ObjecionActiva__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si una objeción se encuentra activa</description>
        <label>Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ProductoObjecion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relación al producto que aplica la objeción</description>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Catalogos de objeciones</relationshipLabel>
        <relationshipName>Catalogos_de_objeciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Relevancia__c</fullName>
        <description>Importancia de la Objeción</description>
        <label>Relevancia</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_TipoObjecion__c</fullName>
        <description>Tipo de objeción indica si se utiliza en Lead u Oportunidad</description>
        <label>Tipo Objeción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Objeciones</fullName>
                </value>
                <value>
                    <fullName>Objeciones Reales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_UsoObjecion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si se utilizo una objecion</description>
        <label>Uso Objeción</label>
        <type>Checkbox</type>
    </fields>
    <label>Catalogo objeciones</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_SB_VTS_ObjecionActiva__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>MX_SB_VTS_ProductoObjecion__c</columns>
        <columns>MX_SB_VTS_TipoObjecion__c</columns>
        <columns>MX_SB_VTS_NombreObjecion__c</columns>
        <columns>MX_SB_VTS_Relevancia__c</columns>
        <columns>MX_SB_VTS_DetOjecion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>CatObje-{000}</displayFormat>
        <label>Nombre de Catalogo objectiones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalogos de objeciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>